apps/staging/duplicacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy
  namespace: duplicacy
spec:
  ingressClassName: traefik
  rules:
    - host: duplicacy.lab.nohermosa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duplicacy
                port:
                  number: 3875
